# nettingi

./: .gitignore  CodeBreakdown.md  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt
docs/jupyter_execute/notebooks/: nb_example.ipynb
docs/source/: conf.py  index.rst
docs/source/notebooks/: index.rst  nb_example.ipynb
docs/source/report/: abstract.rst
docs/source/start/: index.rst  install.rst  quickstart.rst
notebooks/: ConvRFI_mitigation_example.ipynb  RFI_mitigation_examples.ipynb  fine channelize.ipynb  running_aof.ipynb  spectrograms.ipynb
pulsar_reduction/: ACCEL_sift_mask.py  ACCEL_sift_nomask.py  README.md  cleancands.py  compare_cands.py  compare_fft.py  compare_profiles.py  compare_rfi_masks.py  compare_spectra.py  compare_spectrograms.py  compare_time_series.py  do_cands.py  do_paz_toas.py  get_TOAs.py  get_paz_TOAS.py  get_results.py  get_toa_uncs.py  getcands.py  plot_resids.py  plot_spectrogram.py  psrfits2fil.py  raw2spec.py  redo_TOAS.py  redo_folding.py  redo_postfold_reduction.py  reduce_raw_data.py
pulsar_reduction/parfiles/: B0329+54.par  B0355+54.par  J1713+0747.par
src/RFIMitigation/: Untitled.ipynb  utils.py
src/nettingi/: ConvRFI_Mitigation.ipynb  ConvRFIrfi.py  __init__.py  aof.py  core.py  csp.py  iqrmrfi.py  mad.py  manflag.py  plotting.py  reduction.py  se.py  sk.py  utils.py
src/rfi-mitigation/: Untitled.ipynb  Untitled1.ipynb  __init__.py  analysis.py  aof.py  core.py  iqrm.py  iqrmrfi.py  mad.py  mitigateRFI_IQRM.py  plotting.py  reduction.py  running.ipynb  running_aof.ipynb  se.py  sk.py  utils.py
src/rfi-mitigation/.ignore/: testing.ipynb
